# olive-bark-logger

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEFINITION_OF_DONE.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  config.sample.json  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/rulesets/: README.md  main.json
.github/workflows/: ci.yml  nightly.yml  release.yml
deploy/: olive-monitor.service
docs/: DOCUMENTATION-AUDIT.md  GAP-LEDGER.md  I18N.md  PROJECT-SCOPE.md  README.md  RESEARCH-ROADMAP.md  RESPONSIBLE-TECH-AUDITS.md  ROADMAP.md  USER-RESEARCH.md
docs/a11y/: STATEMENT.md
docs/adr/: 0000-record-architecture-decisions.md  0001-single-maintainer-review-posture.md  0002-python-39-floor.md  0003-raw-levels-append-only-calibration.md  0003-weasyprint-for-tagged-pdf-a-export.md  0004-weasyprint-for-tagged-pdf-a-export.md
docs/audits/: accessibility-2026-06-05.md  data-card.md  derived-data-budget.md  methodology-and-limitations.md  no-audio-guarantee.md  recording-law-notes.md  residual-risk.md
docs/ideation/: 01-deep-dive.md  02-large-scale-fixes.md  03-expansions.md  04-impact-and-sequencing.md  README.md
monitor/: __init__.py  calibrate.py  capture.py  capture_live.py  clock.py  config.py  detector.py  features.py  health.py  ipc.py  level.py  log.py  service.py
pwa/: README.md  app.js  clock.js  clock.test.mjs  conformance.test.mjs  detector.js  detector.test.mjs  index.html  level.js  manifest.webmanifest  report.js  report.test.mjs  sw.js
report/: __init__.py  aggregate.py  charts.py  export.py  pdf_export.py  render.py  status.py  violations.py
scripts/: demo_pdf.py  demo_report.py  gen_snapshot.py  setup-pi.sh
spec/: SEMANTICS.md
spec/detector/: avg_excludes_bridged_dip_reading.json  closed_by_flush_at_stream_end.json  debounce_bridges_dip.json  dip_longer_than_debounce_two_events.json  fractional_levels_and_threshold.json  just_below_threshold_no_event.json  level_exactly_at_threshold_is_loud.json  peak_avg_over_loud_readings_only.json  single_transient_filtered_by_min_duration.json  sustained_loud_one_event.json  two_sustained_events_mixed_levels.json  zero_min_duration_keeps_single_frame.json
store/: __init__.py  db.py
tests/: conftest.py  gates.py  test_a11y.py  test_aggregate.py  test_calibrate.py  test_capture_resilient.py  test_checkpoint.py  test_cli.py  test_clock.py  test_config.py  test_conformance.py  test_detector.py  test_eval.py  test_export.py  test_features.py  test_gaps.py  test_gate_selftest.py  test_health.py  test_heatmap.py  test_integration.py  test_level.py  test_log.py  test_no_audio.py  test_no_egress.py  test_pdf_export.py  test_privacy_budget.py  test_properties.py  test_pwa_gates.py  test_quiet_schedule.py  test_report_content.py  test_report_snapshot.py  test_status.py  test_store_durability.py  test_svg_contrast.py  test_violations.py
tests/snapshots/: report.html
